log/build_2023-03-05_17-57-49/my_py_pkg/stderr.log
  File "/home/ros_ws/install/my_py_pkg/lib/python3.8/site-packages/my_py_pkg/hw_status_publisher.py", line 22
    def main(args = None)
                        ^
SyntaxError: invalid syntax

